<resources>
    <string name="app_name">Feh Unit Builder</string>
    <string name="action_settings">Settings</string>

    <string name="hint_build">Build Name…</string>
    <string name="hint_unit">Unit Name…</string>
    <string name="hint_weapon">Weapon Name…</string>
    <string name="hint_assist">Assist Name…</string>
    <string name="hint_special">Special Name…</string>
    <string name="hint_a_skill">A Skill Name…</string>
    <string name="hint_b_skill">B Skill Name…</string>
    <string name="hint_c_skill">C Skill Name…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Build not saved because it is empty.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="delete_word_preamble">Deleting </string>
    <string name="clear_data_toast_text">Clear the data now!</string>
    <string name="no_word">No build</string>
    <string name="unable_to_update">Unable to update the build</string>

</resources>
